ifds/src/tests/verification/snapshots/ifds__tests__verification___sparse_memory_load_different_functions2_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (10) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (18) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (21) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (26) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (27) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (29) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (32) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (38) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (39) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (40) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (41) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (46) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (47) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (48) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (51) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (52) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (53) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (54) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (55) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (60) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (61) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (62) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (63) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (64) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (65) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (66) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (67) at (3, 3) { };
\node[font=\tiny] (note_6) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_7) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_8) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_9) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_10) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_11) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_12) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_13) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_14) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_15) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_16) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_17) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_18) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_19) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_20) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_21) at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] (note_22) at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_23) at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (4, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (9, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (11) at (6, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (12) at (6, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (13) at (6, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (14) at (6, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (15) at (6, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (33) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (34) at (9, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (35) at (5, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (36) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (37) at (5, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (42) at (6, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (43) at (6, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (44) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (45) at (7, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (49) at (6, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (50) at (6, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (56) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (57) at (8, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (58) at (6, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (59) at (7, 7) { };
\node[font=\tiny] (note_0) at (2.5, 2.5) {Const(1, -12345.0)};
\node[font=\tiny] (note_1) at (2.5, 3.5) {Store(1, 0.0, 0)};
\node[font=\tiny] (note_2) at (2.5, 4.5) {Call(1, [], [2])};
\node[font=\tiny] (note_3) at (2.5, 5.5) {Store(1, 1.0, 0)};
\node[font=\tiny] (note_4) at (2.5, 6.5) {Call(1, [], [3])};
\node[font=\tiny] (note_5) at (2.5, 7.5) {Return([])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (31);
		\path[->, blue] (1) [bend right] edge  node { } (32);
		\path[->, blue] (2) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (34);
		\path[->, blue] (0) [bend right] edge  node { } (35);
		\path[->, blue] (0) [bend right] edge  node { } (36);
		\path[->, blue] (0) [bend right] edge  node { } (37);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (1) [bend right] edge  node { } (39);
		\path[->, blue] (1) [bend right] edge  node { } (40);
		\path[->, blue] (1) [bend right] edge  node { } (41);
		\path[->, blue] (2) [bend right] edge  node { } (42);
		\path[->, blue] (2) [bend right] edge  node { } (43);
		\path[->, blue] (18) [loop right] edge  node { } (18);
		\path[->, blue] (1) [bend right] edge  node { } (53);
		\path[->, blue] (1) [bend right] edge  node { } (54);
		\path[->, blue] (1) [bend right] edge  node { } (55);
		\path[->, blue] (2) [bend right] edge  node { } (44);
		\path[->, blue] (10) [bend right] edge  node { } (39);
		\path[->, blue] (10) [bend right] edge  node { } (40);
		\path[->, blue] (10) [bend right] edge  node { } (41);
		\path[->, blue] (1) [bend right] edge  node { } (51);
		\path[->, blue] (1) [bend right] edge  node { } (52);
		\path[->, blue] (0) [bend right] edge  node { } (45);
		\path[->, blue] (0) [bend right] edge  node { } (43);
		\path[->, blue] (2) [bend right] edge  node { } (50);
		\path[->, blue] (18) [bend right] edge  node { } (53);
		\path[->, blue] (18) [bend right] edge  node { } (54);
		\path[->, blue] (18) [bend right] edge  node { } (55);
		\path[->, blue] (0) [bend right] edge  node { } (44);
		\path[->, blue] (10) [bend right] edge  node { } (51);
		\path[->, blue] (10) [bend right] edge  node { } (52);
		\path[->, blue] (0) [bend right] edge  node { } (57);
		\path[->, blue] (0) [bend right] edge  node { } (42);
		\path[->, blue] (2) [bend right] edge  node { } (45);
		\path[->, blue] (18) [bend right] edge  node { } (51);
		\path[->, blue] (18) [bend right] edge  node { } (52);


                \end{tikzpicture}
            \end{document}
