ifds/src/tests/verification/snapshots/ifds__tests__verification___sparse_nested_call_global_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (7) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (29) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (13) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (15) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (23) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (24) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (25) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (26) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (27) at (8, 2) { };
\node[font=\tiny] (note_7) at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] (note_8) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_9) at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] (note_10) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_11) at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] (note_12) at (4.5, 1.5) {Return([0])};
\node[font=\tiny] (note_13) at (4.5, 0.5) {Assign(0, -1)};
\node[font=\tiny] (note_14) at (4.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (10) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (16) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (13, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (20) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (21) at (14, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (28) at (12, 1) { };
\node[font=\tiny] (note_3) at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_4) at (9.5, 1.5) {Return([1])};
\node[font=\tiny] (note_5) at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_6) at (9.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (8) [bend right] edge  node { } (18);
		\path[->, blue] (9) [bend right] edge  node { } (6);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (8) [bend right] edge  node { } (21);
		\path[->, blue] (12) [loop right] edge  node { } (12);
		\path[->, blue] (13) [loop right] edge  node { } (13);
		\path[->, blue] (14) [bend right] edge  node { } (24);
		\path[->, blue] (14) [bend right] edge  node { } (25);
		\path[->, blue] (13) [bend right] edge  node { } (24);
		\path[->, blue] (13) [bend right] edge  node { } (25);
		\path[->, blue] (10) [bend right] edge  node { } (28);
		\path[->, blue] (0) [bend right] edge  node { } (29);


                \end{tikzpicture}
            \end{document}
