ifds/src/tests/verification/snapshots/ifds__tests__verification___sparse_nested_call_memory_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (7) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (8) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (22) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (26) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (35) at (2, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Store(0, 0.0, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (15) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (18) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (27) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (28) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (29) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (30) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (32) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (33) at (6, 2) { };
\node[font=\tiny] (note_7) at (3.5, 0.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_8) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_9) at (3.5, 0.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_10) at (3.5, 1.5) {Return([0])};
\node[font=\tiny] (note_11) at (3.5, 0.5) {Load(0, 0.0, 1)};
\node[font=\tiny] (note_12) at (3.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (12, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (11) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (19) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (12, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (23) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (24) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (25) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (31) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (34) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (36) at (10, 1) { };
\node[font=\tiny] (note_3) at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_4) at (7.5, 1.5) {Return([1])};
\node[font=\tiny] (note_5) at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] (note_6) at (7.5, 1.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (9) [bend right] edge  node { } (21);
		\path[->, blue] (10) [bend right] edge  node { } (6);
		\path[->, blue] (11) [loop right] edge  node { } (11);
		\path[->, blue] (9) [bend right] edge  node { } (24);
		\path[->, blue] (9) [bend right] edge  node { } (25);
		\path[->, blue] (10) [bend right] edge  node { } (8);
		\path[->, blue] (14) [loop right] edge  node { } (14);
		\path[->, blue] (15) [loop right] edge  node { } (15);
		\path[->, blue] (16) [bend right] edge  node { } (29);
		\path[->, blue] (16) [bend right] edge  node { } (30);
		\path[->, blue] (9) [bend right] edge  node { } (31);
		\path[->, blue] (15) [bend right] edge  node { } (29);
		\path[->, blue] (15) [bend right] edge  node { } (30);
		\path[->, blue] (11) [bend right] edge  node { } (34);
		\path[->, blue] (11) [bend right] edge  node { } (31);
		\path[->, blue] (0) [bend right] edge  node { } (35);


                \end{tikzpicture}
            \end{document}
